# Epicinium

./: .custom.make  .gitignore  CMakeLists.txt  Makefile  README.md  settings.template.json
.github/: FUNDING.yml
archive/windows32/: editor.bat  server.bat
archive/windows64_lib/: curl.lib  fzip.lib  m.lib  z.lib
docs/: CREDITS.txt  LICENSE.txt  PRIVACY.md  RELEASENOTES.md
docs/GLEW/: LICENSE.txt
docs/femtozip/: LICENSE.txt
docs/intl/: LICENSE.txt
docs/zlib/: LICENSE.txt
libs/GLEW/: LICENSE
libs/SDL2/: LICENSE_SDL2_gfx  SDL2_gfxPrimitives.c
libs/femtozip/: CompressionModel.h  LICENSE  SubstringPacker.h
libs/imgui/: imgui_impl_sdl.cpp  imgui_sdl.cpp  imgui_sdl.h
libs/jsoncpp/: json-forwards.h  jsoncpp.cpp
libs/openssl/: aes.h  asn1.h  asn1err.h  asn1t.h  async.h  asyncerr.h  bio.h  bioerr.h  blowfish.h  bn.h  bnerr.h  buffer.h  buffererr.h  camellia.h  cast.h  cmac.h  cms.h  cmserr.h  comp.h  comperr.h  conf.h  conf_api.h  conferr.h  crypto.h  cryptoerr.h  ct.h  cterr.h  des.h  dh.h  dherr.h  dsa.h  dsaerr.h  e_os2.h  ec.h  ecdsa.h  ecerr.h  engine.h  engineerr.h  err.h  evp.h  (+55 more)
libs/plog/: Init.h  Log.h  Logger.h  Record.h  Util.h
libs/tinygettext/: iconv.cpp  language.cpp  unix_file_system.cpp
src/action/: .cu-action.cpp  actor.cpp  actor.hpp  border.cpp  border.hpp  figure.cpp  figure.hpp  footprint.cpp  footprint.hpp  guide.cpp  guide.hpp  level.cpp  level.hpp  particle.cpp  particle.hpp  particlebuffer.cpp  particlebuffer.hpp  placementbox.cpp  placementbox.hpp  placementgrid.cpp  placementgrid.hpp  placementpather.hpp  skin.cpp  skin.hpp  skinner.cpp  skinner.hpp  square.cpp  square.hpp  surface.cpp  surface.hpp  tile.cpp  tile.hpp  treetype.cpp  treetype.hpp  unit.cpp  unit.hpp  visualizer.cpp  visualizer.hpp
src/ai/: .cu-ai.cpp  .cu-campaign.cpp  ai.cpp  ai.hpp  aiactingaardvark.cpp  aiactingaardvark.hpp  aiactingalbatross.cpp  aiactingalbatross.hpp  aiactingalligator.cpp  aiactingalligator.hpp  aiactingalpaca.cpp  aiactingalpaca.hpp  aiactinganchovies.cpp  aiactinganchovies.hpp  aiactingantilope.cpp  aiactingantilope.hpp  aiactingarmadillo.cpp  aiactingarmadillo.hpp  aibrawlingbear.cpp  aibrawlingbear.hpp  aibrawlingbearfree.cpp  aibrawlingbearfree.hpp  aichallenge.cpp  aichallenge.hpp  aichargingcheetah.cpp  aichargingcheetah.hpp  aicommander.cpp  aicommander.hpp  aihungryhippo.cpp  aihungryhippo.hpp  ailibrary.cpp  ailibrary.hpp  aineuralnewt.cpp  aineuralnewt.hpp  aiquickquack.cpp  aiquickquack.hpp  airampantrhino.cpp  airampantrhino.hpp  aistorysaddlehead.cpp  aistorysaddlehead.hpp  (+22 more)
src/audio/: .cu-audio.cpp  arranger.cpp  arranger.hpp  audible.cpp  audible.hpp  clip.cpp  clip.hpp  mixer.cpp  mixer.hpp
src/common/: .cu-common.cpp  base32.hpp  benchmark.hpp  clock.cpp  clock.hpp  constructordebugger.cpp  constructordebugger.hpp  coredump.cpp  coredump.hpp  dictator.cpp  dictator.hpp  header.hpp  implodingptr.hpp  keycode.hpp  language.cpp  language.hpp  libloader.hpp  locator.cpp  locator.hpp  logcallback.h  loginstaller.cpp  loginstaller.hpp  parseerror.hpp  point.cpp  point.hpp  randomizer.hpp  setting.cpp  setting.hpp  settings.cpp  settings.hpp  sizeiter.hpp  source.hpp  stringref.cpp  stringref.hpp  system.cpp  system.hpp  validation.cpp  validation.hpp  version.cpp  version.hpp  (+2 more)
src/edit/: editor.cpp  editor.hpp
src/engine/: .cu-diegetic.cpp  .cu-engine.cpp  commander.cpp  commander.hpp  context.cpp  context.hpp  cursor.cpp  cursor.hpp  editortheme.cpp  editortheme.hpp  engine.cpp  engine.hpp  enginekiller.cpp  enginekiller.hpp  engineloop.cpp  engineloop.hpp  exitcode.hpp  localdiorama.cpp  localdiorama.hpp  localgame.cpp  localgame.hpp  localreplay.cpp  localreplay.hpp  mapeditor.cpp  mapeditor.hpp  observer.cpp  observer.hpp  ordercontext.cpp  ordercontext.hpp  selectorcontext.cpp  selectorcontext.hpp  skineditor.cpp  skineditor.hpp  targetcursor.cpp  targetcursor.hpp  tutorial.cpp  tutorial.hpp
src/essai/: essai.cpp  essai.hpp
src/graphics/: .cu-graphics.cpp  animation.cpp  animation.hpp  animationgroup.hpp  animator.cpp  animator.hpp  camera.cpp  camera.hpp  camerafocus.cpp  camerafocus.hpp  collector.cpp  collector.hpp  color.cpp  color.hpp  colorname.cpp  colorname.hpp  displaysettings.cpp  displaysettings.hpp  font.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  loop.cpp  loop.hpp  paint.cpp  paint.hpp  palette.cpp  palette.hpp  picture.cpp  picture.hpp  pixel.cpp  pixel.hpp  primitive.cpp  primitive.hpp  screenshot.cpp  screenshot.hpp  shader.cpp  shader.hpp  sprite.cpp  (+10 more)
src/interface/: .cu-interface.cpp  alignedlayout.cpp  alignedlayout.hpp  backing.cpp  backing.hpp  clickanddrag.cpp  clickanddrag.hpp  dynamictextfield.cpp  dynamictextfield.hpp  filler.cpp  filler.hpp  formshowlayout.cpp  formshowlayout.hpp  frame.cpp  frame.hpp  hiddentag.cpp  hiddentag.hpp  horizontallayout.cpp  horizontallayout.hpp  image.cpp  image.hpp  interfaceelement.cpp  interfaceelement.hpp  layout.cpp  layout.hpp  multitextfield.cpp  multitextfield.hpp  multitextinput.cpp  multitextinput.hpp  padding.cpp  padding.hpp  passwordinput.cpp  passwordinput.hpp  pictureview.cpp  pictureview.hpp  scrollablelayout.cpp  scrollablelayout.hpp  slideshowlayout.cpp  slideshowlayout.hpp  stackedlayout.cpp  (+9 more)
src/logic/: .cu-automaton.cpp  .cu-logic.cpp  aim.cpp  aim.hpp  area.hpp  attacker.cpp  attacker.hpp  automaton.cpp  automaton.hpp  bible.cpp  bible.hpp  board.cpp  board.hpp  cell.cpp  cell.hpp  challenge.cpp  challenge.hpp  change.cpp  change.hpp  changeset.cpp  changeset.hpp  chaostransition.cpp  chaostransition.hpp  cycle.cpp  cycle.hpp  damage.cpp  damage.hpp  descriptor.cpp  descriptor.hpp  difficulty.cpp  difficulty.hpp  elevationtransition.cpp  elevationtransition.hpp  floodfill.hpp  flowfield.hpp  freshwatertransition.cpp  freshwatertransition.hpp  game.hpp  gameowner.hpp  gastransition.cpp  (+61 more)
src/main/: .cu-menu.cpp  (+46 more)
translations/: Documentation.md  cs_CZ.po  de_DE.po  en_US.po  epicinium.pot  es_ES.po  fi_FI.po  fr_FR.po  it_IT.po  nl_NL.po  pl_PL.po  pt_BR.po  ru_RU.po  steam_rich_presence.vdf  tr_TR.po  uk_UA.po  xx_AA.po  xx_XX.po
(+98 files in other folders)
